compiler/tests/should-fail/UndefinedVariable2.via
/* UndefinedNameError */

fun main() {
    val x: int = y;
}
